# multiview-deconvolution

./: .gitignore  .gitmodules  Untitled_analyzeMouseRegistra.m  Untitled_checkAffine.m  Untitled_generateXMLfilesForDrosGCaMP6s_20150505_165429_cluster.m  Untitled_generateXMLfilesForMouseParamSearch.m  Untitled_generateXMLfilesForMouse_15_08_10_cluster.m  Untitled_generateXMLfilesForMouse_cluster.m  Untitled_generateXMLfilesForSpeedMeasurement.m  Untitled_generateXMLfilesForZebrafish_cluster.m  Untitled_jobSubmit.m  Untitled_maskImagesWithRayTracing.m  Untitled_maskImagesWithWeights.m  Untitled_mouse_test_coarse_transformations.m  Untitled_profileInterestPts.m  Untitled_test_coarse_transformations.m  affineTransformDecomposition.m  applyRegistrationFromFiji.m  bin3Darray.mexw64  binning3Darray_mex.cpp  checkAffineTr.m  coarseRegistrationBasedOnMicGeometry.m  compile_mex_files.m  correctCoarseAlignmentUsingManualLandmarks.m  debug_NCCCdiscriminationPower.m  debug_checkBlockwiseMatches.m  debug_plotPointsOfInterest.m  detectInterestPoints_DOG.m  detectInterestPoints_localMaxima.m  discreternd.m  estimateDeconvolutionWeights.m  estimateSliceSharpnessDCT.m  extractInterestPointsFromTGMM_HS.m  find_local_max_3Darray_mex .cpp  fitAffineMultiview.m  fitAffineMultiviewRANSAC.m  fitAffineMultiviewRANSACiteration.m  fitMultiviewAffineFromManualLandmarks.m  fitTranslation.m  function_multiview_camera_transformation.m  (+113 more)
CUDA/: .gitignore  CMakeLists.txt
CUDA/cmake/: git-versioning.cmake
CUDA/src/: CMakeLists.txt  commonCUDA.cu  commonCUDA.h  imgUtils.cpp  imgUtils.h  main_multiviewDeconvLR_multiGPU.cxx  main_multiviewDeconvLR_multiGPU_blocksZ.cxx  main_multiviewDeconvLR_multiGPU_low_mem.cxx  multiGPUblockController.cpp  multiGPUblockController.h  multiviewDeconvolution.cpp  multiviewDeconvolution.cu  multiviewDeconvolution.h  multiviewImage.cpp  multiviewImage.cu  multiviewImage.h  mvd_without_mvd.cpp  mvd_without_mvd.cxx  paramDeconvolution.cpp  paramDeconvolution.h  run_imwarp_flexible.cxx  run_transform_lattice.cpp  run_transform_lattice.cxx  run_trim_psf.cpp  standardCUDAfunctions.cu  standardCUDAfunctions.h  weigthsBlurryMeasure.cu  weigthsBlurryMeasure.h
CUDA/src/dct8x8/: CMakeLists.txt  Common.h
CUDA/src/separableConvolution3D_texture/: CMakeLists.txt  book.h  convolutionTexture.cu  convolutionTexture_common.h  convolutionTexture_gold.cxx  helper_string.h  helper_timer.h  mainTest.cxx
CUDA/test/: CMakeLists.txt  run_imWarpFast.cxx  test_GPU_LRweightsDCT.cu  test_GPU_convolution.cu  test_gpu_elementwiseOp.cu  test_gpu_reductionOp.cu  test_imWarpFast.cxx  test_load_multiview_images.cpp  test_multiview_deconvolution_LR.cpp  test_multiview_deconvolution_LR_multiGPU.cpp  test_total_variation.cxx
Untitled_utils/: Untitled_callGPUcode.m  Untitled_jobSubmit.m  Untitled_testFijiTransformation.m  untitled_FIjiMacroToGenerateViewsFromXML.m  untitled_copyToKLB_15_06_11.m  untitled_mapAffineCoarseToTform.m  untitled_multiGPUdeconv_batch_15_06_11.m  untitled_testXMLfile.m
docs/: Matlab_scripts_blockwise_registration.pptx  Thumbs.db  how_to_use_multiview_deconvolution_executables.txt
imWarpFast/: Untitled_testFlipMatrix.m  findBoundingBox.m  imwarpfast.m  imwarpfast_v1_worksWithRotXAndScalingZ.m  test_imWarpFast_A.m  test_imWarpFast_B.m  test_imWarpFast_C.m
imwarp-flexible-cpp-test/: generate_PSF_with_given_dims.m  input_origin_and_spacing.txt  is_close_enough.m  modpath.m  run_cpp_imwarp_flexible.m  run_tests_2.m  run_tests_4.m  run_tests_6.m  run_tests_8.m  run_tests_9.m
matlab_tests/: README.txt  generate_PSF.m  modpath.m  run_tests.m  save_smv_xml.m  simple_transforms_test_case.m  three_identity_views_test_case.m  trim_PSF.m
registrationFiles/: simview3_15_04_24_PSF_synthetic.klb  simview3_15_04_24_imRegister_Matlab_tform.mat  simview3_15_04_24_imWarp_Matlab_tform_fine.mat
scripts_Matlab_reg_deconv_v1/: script_simview3_coarse_fine_registration_15_04_24.m  script_simview3_coarse_fine_registration_15_05_12.m  script_simview3_coarse_fine_registration_15_05_20.m  script_simview3_coarse_fine_registration_20150505_165429.m  script_simview3_coarse_fine_registration_20150505_185415.m  script_simview3_coarse_fine_registration_20150505_205450.m  script_simview3_coarse_fine_registration_20150709_170711.m  script_simview3_coarse_fine_registration_20150710_154449.m  script_simview3_deconvolution_15_06_11_nuclCh.m  script_simview3_final_reg_20150710.m  script_simview3_final_reg_and_deconv_20150505_125300.m  script_simview3_final_reg_and_deconv_20150505_165429.m  script_simview3_final_reg_and_deconv_20150505_185415.m  script_simview3_final_reg_and_deconv_20150505_205450.m  script_simview3_final_registration_and_deconvolution_15_04_24.m  script_simview3_final_registration_and_deconvolution_15_05_12.m  script_simview3_final_registration_and_deconvolution_15_05_20.m
scripts_bash/: applyRegistrationFiji.sh  applyTiff2KLBFiji.sh  copyFiles2JFRCcluster.sh  multiGPUdeconvolution.sh  multiGPUdeconvolution_Fiji_15_06_11.sh  multiGPUdeconvolution_blocksZ.sh  multiGPUdeconvolution_fullMem.sh  multiGPUdeconvolution_fullMem_zebrafish.sh  qdelRange.sh  xvfb-run
scripts_mouse/: run.ps1
test-imwarp-flexible-cpp/: T_in_row_form.klb  imgaussian_anisotropy.m  input.klb  input_origin.klb  input_origin_and_spacing.txt  input_spacing.klb  input_stack.klb  make_inputs_to_determine_stack_order.m  modpath.m  output.klb  output_dimensions.txt  output_dims.txt  output_origin.klb  output_origin_and_spacing.txt  output_spacing.klb  run_cpp_imwarp_flexible.m  run_matlab_imwarp_flexible.m  run_tests.m  run_tests_11.m  run_tests_5.m  test_with_random_inputs.m  transform_PSF_cpp.m  transform_and_trim_PSF.m
test-mvd-without-mvd/: generate_raw_and_transformed_psf.m  is_close_enough.m  load_smv_xml.m  make_raw_PSFs.m  origin_spacing_and_dims_from_frame.m  psf-view-0.klb  psf-view-1.klb  psf-view-2.klb  raw-psf-view-0.klb  read_one_random_input_klb.m  read_random_input_klbs.m  save_smv_xml.m  test-with-psf-transforming.smv.xml  test.smv.xml  test_mvd_with_psf_transforming_in_exe.m  test_trim.m  test_with_random_inputs.m  (+12 more)
(+69 files in other folders)
